trunk/Archive2/8e/84ab2e37e4b6ba/output
In file included from main.cpp:5:
In file included from /usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/future:35:
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/bits/c++0x_warning.h:32:2: error: This file requires compiler and library support for the ISO C++ 2011 standard. This support is currently experimental, and must be enabled with the -std=c++11 or -std=gnu++11 compiler options.
#error This file requires compiler and library support for the \
 ^
main.cpp:10:5: error: 'auto' type specifier is a C++11 extension [-Werror,-Wc++11-extensions]
    auto len = end - beg;
    ^
main.cpp:15:5: error: 'auto' type specifier is a C++11 extension [-Werror,-Wc++11-extensions]
    auto handle = std::async(std::launch::async,
    ^
main.cpp:15:24: error: no member named 'async' in namespace 'std'
    auto handle = std::async(std::launch::async,
                  ~~~~~^
main.cpp:15:35: error: no member named 'launch' in namespace 'std'
    auto handle = std::async(std::launch::async,
                             ~~~~~^
main.cpp:25:2: error: no newline at end of file [-Werror,-Wnewline-eof]
}
 ^
6 errors generated.
